--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-4 offset-4 max-vh-100 min-vh-100 border  x-over">
+				<div class="col-4 offset-4 border ">
 					<div class="row sticky-top topBar d-flex justify-content-start">
 						<div class="col-1 d-flex align-items-center justify-content-center">
 							<svg
@@ -194,7 +194,7 @@
 						</div> -->
 					</div>
 				</div>				
-				<div class="col-2  offset-8 position-fixed">
+				<div class="col-2" >
 					<div class="form-outline">
 						
 						<div class="  rounded-pill mt-2 p-2 bg-lightgray">
@@ -211,7 +211,7 @@
 							You might like
 						</div>
 						<div class="row mt-2 d-flex justify-content-between">
-							<div class="col-auto">
+							<div class="col-auto p-0">
 								<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
 									<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
 									<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
@@ -226,13 +226,13 @@
 								</div>
 							</div>
 							<div class="col-auto">
-								<button type="button" class="fw-bold btn btn-dark rounded-pill px-4">
+								<button type="button" class="fw-bold btn btn-dark rounded-pill px-3 ">
 									Follow
 								</button>
 							</div>
 						</div>
 						<div class="row mt-2 d-flex justify-content-between">
-							<div class="col-auto">
+							<div class="col-auto p-0">
 								<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
 									<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
 									<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
@@ -247,13 +247,13 @@
 								</div>
 							</div>
 							<div class="col-auto">
-								<button type="button" class="fw-bold btn btn-dark rounded-pill px-4">
+								<button type="button" class="fw-bold btn btn-dark rounded-pill px-3">
 									Follow
 								</button>
 							</div>
 						</div>
 						<div class="row mt-2 d-flex justify-content-between">
-							<div class="col-auto">
+							<div class="col-auto p-0">
 								<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
 									<path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
 									<path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
@@ -268,7 +268,7 @@
 								</div>
 							</div>
 							<div class="col-auto">
-								<button type="button" class="fw-bold btn btn-dark rounded-pill px-4">
+								<button type="button" class="fw-bold btn btn-dark rounded-pill px-3">
 									Follow
 								</button>
 							</div>
